Fix createGrid(): Overflow width

--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ h1 {
 }
 .grid-column {
   flex-grow: 1;
-  min-width: 100px;
-  min-height: 100px;
   border: 1px solid #0d0dd0;
   box-sizing: border-box;
 }
